k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  namespace: dev
spec:
  rules:
    - host: dev.demo.com
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: spring-service
                port:
                  number: 80
